--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass-embedded": "^1.80.6",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vitest": "^2.1.8"
   }
 }
