--- a/.Prettierrc
+++ b/.Prettierrc
@@ -1,5 +1,7 @@
 {
     "semi": true,
     "singleQuote": true,
-    "jsxSingleQuote": false
+    "jsxSingleQuote": false,
+    "tabWidth": 4,
+    "useTabs": false
 }
