--- a/.Prettierrc
+++ b/.Prettierrc
@@ -2,6 +2,5 @@
     "semi": true,
     "singleQuote": true,
     "jsxSingleQuote": false,
-    "tabWidth": 4,
-    "useTabs": false
+    "tabWidth": 4
 }
